Remove API versioning support and related annotations, configurations, and tests.
- Removed `ApiVersion` annotation and its usage across controllers.
- Deleted API versioning configurations including `ApiVersionConfig` and `ApiVersionRequestMappingHandlerMapping`.
- Updated `pom.xml` to improve platform compatibility for `protocArtifact`.
- Added `@ConditionalOnProperty` to LDAP-related beans and controllers to allow property-based enablement.
- Updated `ROADMAP.md` to reflect removal of API versioning as a completed feature.